--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ jdk:
 script:
   - docker build -t kwonghung/spring-boot-kubernetes .
   - docker login --help
+  - echo "$DOCKER_HUB_LOGIN - $DOCKER_HUB_PASSWD"
   - echo "$DOCKER_HUB_PASSWD" | docker login --username "$DOCKER_HUB_LOGIN" --password-stdin
   - docker push kwonghung/spring-boot-kubernetes
