--- a/k8s/mysql.yaml
+++ b/k8s/mysql.yaml
@@ -14,4 +14,5 @@ spec:
       name: mysql
   - name: mysql-client
     image: mysql:8.0
-    command: ["/bin/bash"]
+    command: ["/bin/sh"]
+    args: ["-c" "while true; sleep 10;done"]
