--- a/k8s/mysql.yaml
+++ b/k8s/mysql.yaml
@@ -17,9 +17,9 @@ spec:
     image: mysql:8.0
     env:
     - name: MYSQL_RANDOM_ROOT_PASSWORD
-      value: yes
+      value: "yes"
     - name: MYSQL_DATABASE
-      value: testdb
+      value: "testdb"
     ports:
     - containerPort: 3306
       name: mysql
