--- a/k8s/mysql.yaml
+++ b/k8s/mysql.yaml
@@ -17,7 +17,7 @@ spec:
     image: mysql:8.0
     env:
       - name: MYSQL_RANDOM_ROOT_PASSWORD
-        value: yes
+        value: "yes"
       - name: MYSQL_DATABASE
         value: testdb
       - name: MYSQL_USER
