--- a/k8s/mysql.yaml
+++ b/k8s/mysql.yaml
@@ -1,16 +1,23 @@
 apiVersion: v1
-kind: Secret
-metadata: 
-  name: mysql-secret
-type: Opaque
-stringData:
-  mysql-user: testuser
-  mysql-passwd: passw0rd
+kind: Service
+metadata:
+  name: mysql-svc
+  labels:
+    app: mysql
+spec:
+  type: ClusterIP
+  ports:
+  - port: 3306
+    targetPort: 3306
+  selector:
+    app: mysql
 ---
 apiVersion: v1
 kind: Pod
 metadata:
-  name: mysql
+  name: mysql-pod
+  labels:
+    app: mysql
 spec:
   containers:
   - name: mysql-server
@@ -33,3 +40,14 @@ spec:
     ports:
     - containerPort: 3306
       name: mysql
+---
+apiVersion: v1
+kind: Secret
+metadata: 
+  name: mysql-secret
+  labels:
+    app: mysql
+type: Opaque
+stringData:
+  mysql-user: testuser
+  mysql-passwd: passw0rd
