--- a/k8s/springboot-app.yaml
+++ b/k8s/springboot-app.yaml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: springboot-svc
+spec:
+  ports:
+  - port:8080
+    targetPort: 8080
+  selector
+    pod-name: abc
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
