--- a/k8s/springboot-app.yaml
+++ b/k8s/springboot-app.yaml
@@ -29,3 +29,6 @@ spec:
         image: kwonghung/spring-boot-docker-secret:latest
         ports:
         - containerPort: 8080
+        env:
+        - name: SPRING_PROFILES_ACTIVE
+          value: k8s
