--- a/k8s/springboot-app.yaml
+++ b/k8s/springboot-app.yaml
@@ -47,4 +47,4 @@ spec:
         - containerPort: 8080
         env:
         - name: SPRING_PROFILES_ACTIVE
-          value: default
+          value: k8s
